# embedded-workshop-4

./: LICENSE  justfile  readme.md
code/buddy-system/common/: Cargo.toml
code/buddy-system/common/src/: lib.rs
code/buddy-system/firmware/: Cargo.toml
code/buddy-system/firmware/.cargo/: config.toml
code/buddy-system/firmware/src/: main.rs
code/buddy-system/host/: Cargo.toml
code/buddy-system/host/src/: main.rs
code/embassy_interrupt/: Cargo.toml
code/embassy_polling_button/: Cargo.toml
code/hello_embassy/: Cargo.toml
code/hello_world/: Cargo.toml
code/i2c_imu/: Cargo.toml
code/i2c_imu_c3/: Cargo.toml
code/i2c_imu_s3/: Cargo.toml
code/interrupt/: Cargo.toml
code/polling/: Cargo.toml
code/uart-2-boards/board1/: Cargo.toml  build.rs
code/uart-2-boards/board2/: Cargo.toml
code/uart-2-boards/board2/.cargo/: config.toml
docs/: book.toml
docs/src/: SUMMARY.md  board-specs.md  buddy-system.md  example-chapter-mini-exercises.md  great-crates-for-embedded-development.md  how-embedded-looks-like.md  i2c-imu.md  key-concepts-of-embassy.md  let-s-detect-a-button-press.md  let-s-write-a-blinky-project.md  let-s-write-a-simple-embassy-project.md  let-s-write-another-embassy-project.md  more-i2c.md  other-embedded-frameworks.md  overview-on-embedded-architecture.md  overview-on-embedded-software.md  setup.md  sources.md
