[package]
edition = "2021"
name = "i2c_imu"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "i2c_imu"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
    "defmt",
    "esp32s3",
    "unstable",
] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
    "defmt",
    "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32s3"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = "2.1.1"

# https://github.com/barafael/mpu6050-dmp-rs
mpu6050-dmp = { version = "0.6.0", features = ["async", "defmt-03"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
