[package]
edition = "2021"
name = "interrupt"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "interrupt"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
    "defmt",
    "esp32c3",
    "unstable",
] }

critical-section = "1.2.0"
rtt-target = { version = "0.6.1", features = ["defmt"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
