[package]
edition = "2021"
name = "firmware"
version = "0.1.0"

[dependencies]
common = { path = "../common" }
defmt = "0.3.10"
embassy-executor = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal = { version = "1.0.0-rc.0", features = [
    "defmt",
    "esp32c3",
    "unstable",
] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3", "defmt"] }
heapless = { version = "0.7.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
postcard = { version = "1.1.1", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
