[package]
edition      = "2021"
name         = "esp32c3-display-board"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "esp32c3-display-board"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }
embassy-executor = { version = "0.7.0", features = ["executor-thread"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-println = { version = "0.15.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.17.0", features = ["esp32c3", "panic-handler", "println"] }
heapless = "0.8.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
